--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "complex.js": "^2.0.15",
     "core-js": "^3.6.5",
-    "marvinj-ts": "^0.2.1",
-    "vue": "^2.6.11"
+    "javascript-color-gradient": "^1.3.2",
+    "vue": "^3.2.26"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
